Ensure blur covers UI chrome

--- a/css/noflo-ui.css
+++ b/css/noflo-ui.css
@@ -44,6 +44,9 @@ input:focus, select:focus, textarea:focus, button:focus, h1, h2, h3, div, a, p, 
 #container.blur {
   -webkit-filter: blur(2px);
   filter: blur(2px);
+  width: 100%;
+  height: 100%;
+  position: absolute;
 }
 
 h1, h2, h3 {
